--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Amusic</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/caa99f4d00.js" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
     <nav>
@@ -65,14 +65,14 @@
     </div>
 
     <div class ="bottom">
-        <input type="range" id="myProgressBar" min="0" max="100">
+        <input type="range" id="myProgressBar" value="0" min="0" max="100">
         <div class="icons">
             <i class="fa-solid fa-2x fa-backward"></i>
-            <i class="fa-solid fa-2x fa-circle-play"></i>
+            <i class="fa-solid fa-2x fa-circle-play" id = "Play"></i>
             <i class="fa-solid fa-2x fa-forward"></i>
         </div>
         <div class="songInfo">
-            <img src="images/play.gif" width="50px"> Golden-Harry Styles
+            <img  src="images/play.gif"  width="50px" id="gif"> Golden-Harry Styles
         </div>
     </div>
 </body>
