--- a/index.html
+++ b/index.html
@@ -26,38 +26,38 @@
             
                 <div class="song">
                     <img src="images/cover2.jpg" alt="1">
-                    <span>Golden</span>
-                    <span class="songlistplay"><span class="timestamp">01:12<i class="fa-solid fa-circle-play"></i></span></span>
+                    <span class = "songName">Golden</span>
+                    <span class="songlistplay"><span class="timestamp">01:12<i id="0" class="fa-solid fa-circle-play songPlay"></i></span></span>
                 </div>
 
                 <div class="song">
                     <img src="images/cover3.jpg" alt="1">
-                    <span>Golden </span>
-                    <span class="songlistplay"><span class="timestamp">01:12<i class="fa-solid fa-circle-play"></i></span></span>
+                     <span class = "songName">Peaches</span> </span>
+                    <span class="songlistplay"><span class="timestamp">01:12<i id="1" class="fa-solid fa-circle-play songPlay"></i></span></span>
                 </div>
 
                 <div class="song">
                     <img src="images/cover1.jpg" alt="1">
-                    <span>Golden</span>
-                    <span class="songlistplay"><span class="timestamp">01:12<i class="fa-solid fa-circle-play"></i></span></span>
+                    <span class = "songName">Golden</span>
+                    <span class="songlistplay"><span class="timestamp">01:12<i id="2" class="fa-solid fa-circle-play songPlay"></i></span></span>
                 </div>
 
                 <div class="song">
                     <img src="images/cover2.jpg" alt="1">
-                    <span>Golden</span>
-                    <span class="songlistplay"><span class="timestamp">01:12<i class="fa-solid fa-circle-play"></i></span></span>
+                    <span class = "songName">Peaches</span>
+                    <span class="songlistplay"><span class="timestamp">01:12<i id="3" class="fa-solid fa-circle-play songPlay"></i></span></span>
                 </div>
 
                 <div class="song">
                     <img src="images/cover3.jpg" alt="1">
-                    <span>Golden</span>
-                    <span class="songlistplay"><span class="timestamp">01:12<i class="fa-solid fa-circle-play"></i></span></span>
+                    <span class = "songName">Golden</span>
+                    <span class="songlistplay"><span class="timestamp">01:12<i id="4" class="fa-solid fa-circle-play songPlay"></i></span></span>
                 </div>
 
                 <div class="song">
                     <img src="images/cover1.jpg" alt="1">
-                    <span>Golden</span>
-                    <span class="songlistplay"><span class="timestamp">01:12<i class="fa-solid fa-circle-play"></i></span></span>
+                    <span class = "songName">Peaches</span>
+                    <span class="songlistplay"><span class="timestamp">01:12<i id="5" class="fa-solid fa-circle-play songPlay"></i></span></span>
                 </div>
             </div>
         </div>
@@ -67,12 +67,12 @@
     <div class ="bottom">
         <input type="range" id="myProgressBar" value="0" min="0" max="100">
         <div class="icons">
-            <i class="fa-solid fa-2x fa-backward"></i>
+            <i class="fa-solid fa-2x fa-backward" id ="previous"></i>
             <i class="fa-solid fa-2x fa-circle-play" id = "Play"></i>
-            <i class="fa-solid fa-2x fa-forward"></i>
+            <i class="fa-solid fa-2x fa-forward" id ="next"></i>
         </div>
         <div class="songInfo">
-            <img  src="images/play.gif"  width="50px" id="gif"> Golden-Harry Styles
+            <img  src="images/play.gif"  width="50px" id="gif"><span id ="songDisplayBottom">Golden-Harry Styles</span> 
         </div>
     </div>
 </body>
